aggiunta la partita al dom

--- a/Dadi/index.html
+++ b/Dadi/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Sfida il Terminator</h1>
+        <div class="container">
+            <div id="usernumber" class="row"></div>
+            <div id="computernumber" class="row"></div>
+        </div>
+        <div id="risultato"></div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
