aggiunto array email e emailUtenti.includes(usermail)

--- a/Email/index.html
+++ b/Email/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Controlla se puoi accedere</h1>
+        <div>
+            <label for="email" id="email">Inserisci l'email:</label>
+            <input type="email" name="email" required>
+            <input type="submit" value="submit" name="email" onclick="">
+        </div>
+        <div id="accesso"></div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
