--- a/Email/index.html
+++ b/Email/index.html
@@ -10,9 +10,9 @@
     <main>
         <h1>Controlla se puoi accedere</h1>
         <div>
-            <label for="email" id="email">Inserisci l'email:</label>
-            <input type="email" name="email" required>
-            <input type="submit" value="submit" name="email" onclick="">
+            <label for="email" >Inserisci l'email:</label>
+            <input type="email" name="email" id="email" required>
+            <input type="submit" value="submit" name="email" id="submit">
         </div>
         <div id="accesso"></div>
     </main>
