--- a/Email/index.html
+++ b/Email/index.html
@@ -9,10 +9,15 @@
 <body>
     <main>
         <h1>Controlla se puoi accedere</h1>
-        <div>
-            <label for="email" >Inserisci l'email:</label>
-            <input type="email" name="email" id="email" required>
-            <input type="submit" value="submit" name="email" id="submit">
+        <div class="container">
+            <div class="input-email">
+                <label for="email" >Inserisci l'email:</label>
+                <input type="email" name="email" id="email" required>
+            </div>
+            <div class="button">
+                <input type="submit" value="submit" name="email" id="submit">
+                <input type="button" value="reset" name="reset" id="reset">
+            </div>
         </div>
         <div id="accesso"></div>
     </main>
