aggiunto link per collegare gli index.html tra loro

--- a/Dadi/index.html
+++ b/Dadi/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <a href="../Email/index.html">Email</a>
+    </header>
     <main>
         <h1>Sfida il Terminator</h1>
         <div class="container">
