aggiunti tutti i link alle paggine index html e stile nel css

--- a/Dadi/index.html
+++ b/Dadi/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="../Email/index.html">Email</a>
+        <a id="sinistra" href="../Email/index.html">Email</a>
+        <a id="destra" href="../Saltare Dispari/index.html">Saltare Dispari</a>
     </header>
     <main>
         <h1>Sfida il Terminator</h1>
