--- a/Email/index.html
+++ b/Email/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="../Dadi/index.html">Dadi</a>
+        <a id="destra" href="../Dadi/index.html">Dadi</a>
+        <a id="sinistra" href="../Saltare Dispari/index.html">Saltare Dispari</a>
     </header>
     <main>
         <h1>Controlla se puoi accedere</h1>
