--- a/Saltare Dispari/index.html
+++ b/Saltare Dispari/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <a id="sinistra" href="../Dadi/index.html">Dadi</a>
+        <a id="destra" href="../Email/index.html">Email</a>
+    </header>
     <main>
         <h1>Mostra i pari</h1>
         <div></div>
